# SmartTracker

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt
Samples/: smartTracker.py  test_llm.py  test_ocr.py
