[project]
name = "smarttracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "fastmcp>=2.14.1",
    "google-genai>=1.56.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
